--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YourBrand — Healthcare Documentation & RCM</title>
-    <meta name="description" content="Medical scribing, coding, billing, and analytics that free clinicians to focus on care." />
+    <title>LUZORION — Medical documentation that works for your practice.</title>
+    <meta name="description" content="Accurate scribing, coding, and billing services that free clinicians to focus on patients — delivered securely and on time." />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="format-detection" content="telephone=no, date=no, email=no, address=no" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
