--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUZORION — Medical documentation that works for your practice.</title>
-    <meta name="description" content="Accurate scribing, coding, and billing services that free clinicians to focus on patients — delivered securely and on time." />
-    <meta name="theme-color" content="#0ea5e9" />
+    <title>LUZORION — Medical Scribing, Coding & Billing Services</title>
+    <meta name="description" content="LUZORION provides accurate medical scribing, coding, and billing services that free clinicians to focus on patients. HIPAA compliant healthcare documentation solutions for healthcare providers." />
+    <meta name="keywords" content="LUZORION, medical scribing, medical coding, medical billing, healthcare documentation, HIPAA compliant, RCM, EHR optimization, clinical documentation, healthcare IT, healthcare services" />
+    <meta name="author" content="LUZORION" />
+    <meta name="theme-color" content="#8FA63A" />
+    <meta name="robots" content="index, follow" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="format-detection" content="telephone=no, date=no, email=no, address=no" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/logo.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="LUZORION" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="LUZORION — Medical Documentation Services for Healthcare Providers" />
+    <meta property="og:description" content="Accurate medical scribing, coding, and billing services that free clinicians to focus on patients — delivered securely and on time. HIPAA compliant healthcare documentation solutions." />
+    <meta property="og:image" content="/images/logo.png" />
+    <meta property="og:url" content="https://luzorion.com" />
+    <meta property="og:site_name" content="LUZORION" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="LUZORION — Medical Documentation Services for Healthcare Providers" />
+    <meta name="twitter:description" content="Accurate medical scribing, coding, and billing services that free clinicians to focus on patients — delivered securely and on time. HIPAA compliant healthcare documentation solutions." />
+    <meta name="twitter:image" content="/images/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
