Complete Hillside Dhaka Pharmacy transformation - all pages updated

--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUZORION — Medical Scribing, Coding & Billing Services</title>
-    <meta name="description" content="LUZORION provides accurate medical scribing, coding, and billing services that free clinicians to focus on patients. HIPAA compliant healthcare documentation solutions for healthcare providers." />
-    <meta name="keywords" content="LUZORION, medical scribing, medical coding, medical billing, healthcare documentation, HIPAA compliant, RCM, EHR optimization, clinical documentation, healthcare IT, healthcare services" />
-    <meta name="author" content="LUZORION" />
-    <meta name="theme-color" content="#8FA63A" />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="format-detection" content="telephone=no, date=no, email=no, address=no" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/logo.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="LUZORION" />
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="LUZORION — Medical Documentation Services for Healthcare Providers" />
-    <meta property="og:description" content="Accurate medical scribing, coding, and billing services that free clinicians to focus on patients — delivered securely and on time. HIPAA compliant healthcare documentation solutions." />
-    <meta property="og:image" content="/images/logo.png" />
-    <meta property="og:url" content="https://luzorion.com" />
-    <meta property="og:site_name" content="LUZORION" />
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="LUZORION — Medical Documentation Services for Healthcare Providers" />
-    <meta name="twitter:description" content="Accurate medical scribing, coding, and billing services that free clinicians to focus on patients — delivered securely and on time. HIPAA compliant healthcare documentation solutions." />
-    <meta name="twitter:image" content="/images/logo.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div id="root">
-      <div style="text-align: center; padding: 2rem;">
-        <h1>Loading...</h1>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="/images/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hillside Dhaka Pharmacy — Your Local Pharmacy in Jamaica, NY</title>
+  <meta name="description"
+    content="Hillside Dhaka Pharmacy serving the Jamaica, NY community for many years. Fast prescription filling, free delivery, immunizations, health services. We accept most insurances. Walk-ins welcome at 17014 Hillside Ave." />
+  <meta name="keywords"
+    content="Hillside Dhaka Pharmacy, Jamaica NY pharmacy, prescription filling, immunizations, flu shots, COVID vaccine, free delivery, Bengali pharmacy, local pharmacy, 17014 Hillside Ave, Queens pharmacy, medication transfer" />
+  <meta name="author" content="Hillside Dhaka Pharmacy" />
+  <meta name="theme-color" content="#2D8659" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="format-detection" content="telephone=no, date=no, email=no, address=no" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/logo.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Hillside Dhaka Pharmacy" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Hillside Dhaka Pharmacy — Your Local Pharmacy in Jamaica, NY" />
+  <meta property="og:description"
+    content="Community pharmacy serving Jamaica, NY. Fast prescriptions, free delivery, immunizations & health services. MON-SAT 10AM-7PM. Located at 17014 Hillside Ave." />
+  <meta property="og:image" content="/images/logo.png" />
+  <meta property="og:url" content="https://hillsidedhakapharma.com" />
+  <meta property="og:site_name" content="Hillside Dhaka Pharmacy" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Hillside Dhaka Pharmacy — Your Local Pharmacy in Jamaica, NY" />
+  <meta name="twitter:description"
+    content="Community pharmacy serving Jamaica, NY. Fast prescriptions, free delivery, immunizations & health services. MON-SAT 10AM-7PM. Located at 17014 Hillside Ave." />
+  <meta name="twitter:image" content="/images/logo.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div id="root">
+    <div style="text-align: center; padding: 2rem;">
+      <h1>Loading...</h1>
     </div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html> 
+  </div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
+</html>
